--- a/formhandler/app/index.html
+++ b/formhandler/app/index.html
@@ -15,11 +15,11 @@
           <form data-coffee-order="form">
             <div class="form-group">
               <label for="coffeeOrder">Coffee Order</label>
-              <input class="form-control" value="VBC" name="coffee" id="coffeeOrder" autofocus>
+              <input class="form-control" value="" name="coffee" id="coffeeOrder" autofocus>
             </div>
             <div class="form-group">
               <label for="emailInput">Email</label>
-              <input class="form-control" type="email" name="emailAddress" id="emailInput" value="abc@gmail.com" placeholder="dr@who.com">
+              <input class="form-control" type="email" name="emailAddress" id="emailInput" value="" placeholder="dr@who.com">
             </div>
             <div class="radio">
               <label>
